Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1268,7 +1268,7 @@ fieldset {
     #profilediv {
         width: 35%;
         text-align: left;
-        order: 3;
+        order: 2;
     }
     #profilepic {
         width: 200px;
